# rezonance

./: .gitignore  LICENSE  main.py  pyproject.toml
src/: generator.py  music.py
